<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.casehub</groupId>
  <artifactId>casehub-ledger-parent</artifactId>
  <version>0.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>CaseHub Ledger - Parent</name>
  <description>CaseHub extension — immutable audit ledger with hash chain, peer attestations, and EigenTrust reputation for Quarkus applications</description>
  <url>https://github.com/casehubio/ledger</url>

  <modules>
    <module>api</module>
    <module>runtime</module>
    <module>deployment</module>
    <module>persistence-memory</module>
  </modules>

  <repositories>
    <repository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/*</url>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/ledger</url>
    </repository>
    <snapshotRepository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/ledger</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>

  <scm>
    <connection>scm:git:https://github.com/casehubio/ledger.git</connection>
    <developerConnection>scm:git:https://github.com/casehubio/ledger.git</developerConnection>
    <url>https://github.com/casehubio/ledger</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <quarkus.version>3.32.2</quarkus.version>
    <compiler-plugin.version>3.13.0</compiler-plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire-plugin.version>3.2.5</surefire-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-api</artifactId>
        <version>0.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.26.3</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>io.smallrye</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>with-examples</id>
      <modules>
        <module>examples/order-processing</module>
        <module>examples/trust-score-routing</module>
      </modules>
    </profile>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <skipITs>false</skipITs>
        <quarkus.native.enabled>true</quarkus.native.enabled>
      </properties>
    </profile>
  </profiles>

</project>
